methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:54: error: not found: type YELLOW
  setCouleurBrosse(color:YELLOW);
                         ^FlowerPot:54: error: not found: value color
  setCouleurBrosse(color:YELLOW);
                   ^